--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@stream-io/node-sdk": "^0.1.13",
     "@stream-io/video-react-sdk": "^0.6.10",
+    "@types/react-datepicker": "^6.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.372.0",
